interpreter-janeklang/tests/bad/06_mainWithArgs_7.janek
int i = 2;

int asd(){
    return 0;
}

int main(int a){
    return 0;
}